# RCbenchmark_UDPClient

./: CHANGELOG.md  README.md  UDPChatClient.py  pyproject.toml
examples/: demo_full.py  demo_test_port.py
src/rcbenchmark_udp/: __init__.py  client.py
tests/: test_import.py
