[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcbenchmark-udp-client"
version = "0.1.0"
description = "Python UDP client for communicating with RCbenchmark via its UDP chat interface."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Your Name"}]
keywords = ["rcbenchmark", "udp", "telemetry", "throttle"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Repository = "https://github.com/<your-org-or-user>/rcbenchmark-udp-client"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
